# BrainDamaged

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  TODO.txt
bdasm/: CMakeLists.txt
bdasm/include/: BrainDamagedAssembler.hpp
bdasm/src/: BrainDamagedAssembler.cpp  Main.cpp
bdvm/: CMakeLists.txt
bdvm/include/: BrainDamagedVM.hpp  Bytecode.hpp  Types.hpp  VM_Data.hpp  VM_Object.hpp  VM_Type.hpp
bdvm/src/: BrainDamagedVM.cpp  Main.cpp
bfc/: CMakeLists.txt
bfc/include/: BrainFuckCompiler.hpp
bfc/src/: BrainFuckCompiler.cpp  Main.cpp
examples/asm/: calc.bdasm  crash.bdasm
libbdvm/: CMakeLists.txt
libbdvm/include/: Bytecode.hpp  Chars.hpp  Types.hpp  config.hpp
